fix: adjust styling for delete account section to improve layout and readability

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -132,7 +132,10 @@ textarea {
 
 .delete-account p{
     margin-bottom: 0px;
+    margin-right: 10px;
+    font-size: 0.875rem;
 }
+
 
 .delete-button {
     background-color: var(--error-border);
